5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1107.log
== TEST (2019-04-30 10:54:58) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(x == 0 and c == 0):
		print("Hoje eh domingo e o dia futuro eh domingo")
	elif(x == 1)
	
-- ERROR:
File "XXXX", line 9
    elif(x == 1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:55:04) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(x == 0 and c == 0):
		print("Hoje eh domingo e o dia futuro eh domingo")
	
	
-- ERROR:
File "XXXX", line 9
    elif(x == 1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:56:25) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(x == 2 and c == 4):
		print("Hoje eh domingo e o dia futuro eh domingo")
	
	
-- ERROR:
File "XXXX", line 9
    elif(x == 1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:17) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(x == 0 and c == 0):
		print("Hoje eh domingo e o dia futuro eh domingo")
	
	
-- ERROR:
File "XXXX", line 9
    elif(x == 1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:43:53) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
			print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:28) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:33) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
			print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:48:02) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
			print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:50:00) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:50:03) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:50:11) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
				print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", x, "eh invalida")
else:
	print("A entrda", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:52:39) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		"domingo" = z
		elif(x == 1):
			"segunda" = z
		elif(x == 2):
			"terca" = z
		elif(x == 3):
			"quarta" = z
		elif(x == 4):
			"quinta" = z
		elif(x == 5):
			"sexta" = z
		elif(x == 6):
			"sabado" = z
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    "domingo" = z
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:55:43) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
		z = "domingo" 
		elif(x == 1):
		z = "segunda" 
		elif(x == 2):
		z = "terca" 
		elif(x == 3):
		z = "quarta" 
		elif(x == 4):
		z = "quinta"
		elif(x == 5):
		z = "sexta" 
		elif(x == 6):
		z = "sabado" 
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- ERROR:
File "XXXX", line 10
    z = "domingo" 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:56:14) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
			z = "domingo" 
		elif(x == 1):
			z = "segunda" 
		elif(x == 2):
			z = "terca" 
		elif(x == 3):
			z = "quarta" 
		elif(x == 4):
			z = "quinta"
		elif(x == 5):
			z = "sexta" 
		elif(x == 6):
			z = "sabado" 
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:56:59) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
			z = "domingo" 
		elif(x == 1):
			z = "segunda" 
		elif(x == 2):
			z = "terca" 
		elif(x == 3):
			z = "quarta" 
		elif(x == 4):
			z = "quinta"
		elif(x == 5):
			z = "sexta" 
		elif(x == 6):
			z = "sabado" 
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", z, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:57:11) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
			z = "domingo" 
		elif(x == 1):
			z = "segunda" 
		elif(x == 2):
			z = "terca" 
		elif(x == 3):
			z = "quarta" 
		elif(x == 4):
			z = "quinta"
		elif(x == 5):
			z = "sexta" 
		elif(x == 6):
			z = "sabado" 
		if(y == 0):
			p = "domingo"
		elif(y == 1):
			p = "segunda"
		elif(y == 2):
			p = "terca"
		elif(y == 3):
			p = "quarta"
		elif(y == 4):
			p = "quinta"
		elif(y == 5):
			p = "sexta"
		elif(y == 6):
			p = "sabado"
		print("Hoje eh", z, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:57:47) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
			z = "domingo" 
		elif(x == 1):
			z = "segunda" 
		elif(x == 2):
			z = "terca" 
		elif(x == 3):
			z = "quarta" 
		elif(x == 4):
			z = "quinta"
		elif(x == 5):
			z = "sexta" 
		elif(x == 6):
			z = "sabado" 
		if(c == 0):
			p = "domingo"
		elif(c == 1):
			p = "segunda"
		elif(c == 2):
			p = "terca"
		elif(c == 3):
			p = "quarta"
		elif(c == 4):
			p = "quinta"
		elif(c == 5):
			p = "sexta"
		elif(c == 6):
			p = "sabado"
		print("Hoje eh", z, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:57:54) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
			z = "domingo" 
		elif(x == 1):
			z = "segunda" 
		elif(x == 2):
			z = "terca" 
		elif(x == 3):
			z = "quarta" 
		elif(x == 4):
			z = "quinta"
		elif(x == 5):
			z = "sexta" 
		elif(x == 6):
			z = "sabado" 
		if(c == 0):
			p = "domingo"
		elif(c == 1):
			p = "segunda"
		elif(c == 2):
			p = "terca"
		elif(c == 3):
			p = "quarta"
		elif(c == 4):
			p = "quinta"
		elif(c == 5):
			p = "sexta"
		elif(c == 6):
			p = "sabado"
		print("Hoje eh", z, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:58:05) 
-- CODE:
x = int(input("numero inteiro: "))
y = int(input("numero do dia no futuro: "))

#caluclo do y 
c = (x + y) % 7

if(x >= 0 and x <= 6):
	if(y > 0):
		if(x == 0):
			z = "domingo" 
		elif(x == 1):
			z = "segunda" 
		elif(x == 2):
			z = "terca" 
		elif(x == 3):
			z = "quarta" 
		elif(x == 4):
			z = "quinta"
		elif(x == 5):
			z = "sexta" 
		elif(x == 6):
			z = "sabado" 
		if(c == 0):
			p = "domingo"
		elif(c == 1):
			p = "segunda"
		elif(c == 2):
			p = "terca"
		elif(c == 3):
			p = "quarta"
		elif(c == 4):
			p = "quinta"
		elif(c == 5):
			p = "sexta"
		elif(c == 6):
			p = "sabado"
		print("Hoje eh", z, "e o dia futuro eh", p)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
	

-- EXECUTION TIME:
0.132797
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
